# spit

./: CMakeLists.txt  COPYING  README.md
examples/: CMakeLists.txt  lorem.cpp  lorem.txt  string-len.cpp  switch.cpp
include/: spit-atoi.inl  spit-min.inl  spit.hpp
